--- a/css/index.css
+++ b/css/index.css
@@ -69,15 +69,26 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 .container {
-	width: 876px;
-	margin: auto;
+	max-width: 876px;
+	margin: 0 auto;
 }
+
 
 .top-nav {
 	margin-top: 40px;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+  align-items: center;
+}
+
+
+@media ( max-width: 800px) {
+  .top-nav {
+    flex-direction: column;
+  }
+  .logo-link {
+    order: -1;
+  }
 }
 
 nav a {
@@ -116,33 +127,42 @@ header button {
 	width: 150px;
 }
 
-
-.page-divider {
-	border-bottom: black solid 1px;
-	margin: 40px 0;
+@media ( max-width: 800px) {
+  header img {
+    display: none;
+  }
 }
 
-.page-divider-thick {
+.page-divider {
 	border-bottom: black solid 2px;
-	margin: 40px 0;
+	margin: 40px 0 40px;
 }
 
 .top-content {
 	display: flex;
-	margin: 20px 0;
+  justify-content: space-between;
+}
+
+.top-content .column {
+  width: 49%;
+  margin-bottom: 20px;
+  border: 1px solid green;
+}
+
+.middle-img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
 }
 
 .bottom-content {
 	display: flex;
-	margin: 20px 0;
+  justify-content: space-between;
 }
 
-.column {
-	margin-left: 20px;
-}
-
-.column:first-child {
-	margin-left: 0;
+.bottom-content .column {
+  width: 31.3%;
+  margin-bottom: 20px;
 }
 
 address a {
@@ -153,7 +173,6 @@ address a {
 footer {
 	margin: 50px 0;
 	text-align: center;
-	font-size: .9em;
 }
 
 /* Services Page Markup Starts Here */
