Tweaked size of elements in mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,7 @@ h1, h2, h3, h4, h5 {
   .top-nav a {
     padding: 20px 0;
     width: 100%;
+    font-size: 1.2em;
     text-align: center;
     border-bottom: 1px solid lightgray;
   }
@@ -148,6 +149,18 @@ header button {
 	font-size: 18px;
 	border: 1px solid black;
 	width: 150px;
+}
+
+@media ( max-width: 800px ) {
+  header button {
+    width: 25%;
+  }
+}
+
+@media ( max-width: 800px ) {
+  header button {
+    width: 60%;
+  }
 }
 
 @media ( max-width: 800px ) {
