--- a/css/index.css
+++ b/css/index.css
@@ -110,9 +110,6 @@ h1, h2, h3, h4, h5 {
     text-align: center;
     border-bottom: 1px solid lightgray;
   }
-
-  .top-nav a:first-of-type {
-  }
 }
 
 nav a {
@@ -350,7 +347,7 @@ footer {
   }
 }
 
-.services-bottom p{
+.services-bottom p {
 	padding: 0 50px 30px 0;
 }
 
@@ -371,4 +368,14 @@ footer {
 
 .services-footer {
 	margin: 100px 0;
+}
+
+@media ( max-width: 500px ) {
+  * {
+  text-align: center;
+  }
+  
+  .services-bottom p {
+    padding: 0 0 20px;
+  }
 }
