--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5 {
     width: 100%;
     font-size: 1.2em;
     text-align: center;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid gray;
   }
 }
 
